--- a/backend/package.json
+++ b/backend/package.json
@@ -26,12 +26,13 @@
     "@nestjs/websockets": "^5.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
+    "typeorm": "^0.2.6",
     "typescript": "^2.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.39",
     "@types/jest": "^21.1.8",
-    "@types/node": "^9.3.0",
+    "@types/node": "^9.6.20",
     "@types/supertest": "^2.0.4",
     "jest": "^21.2.1",
     "nodemon": "^1.14.1",
