PARAMETROS DE CONEXION
Se agregaron los parametros de conexion a la BD.

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
     "typeorm": "^0.2.6",
-    "typescript": "^2.8.0"
+    "typescript": "^2.8.0",
+    "@nestjs/typeorm": "latest"
   },
   "devDependencies": {
     "@types/express": "^4.0.39",
