--- a/backend/package.json
+++ b/backend/package.json
@@ -23,12 +23,13 @@
     "@nestjs/core": "^5.0.0",
     "@nestjs/microservices": "^5.0.0",
     "@nestjs/testing": "^5.0.0",
+    "@nestjs/typeorm": "latest",
     "@nestjs/websockets": "^5.0.0",
+    "mysql": "^2.15.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
     "typeorm": "^0.2.6",
-    "typescript": "^2.8.0",
-    "@nestjs/typeorm": "latest"
+    "typescript": "^2.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.39",
